# pokemon_tradebot

./: bot.py  config.py  pyproject.toml  readme.md  requirements.txt  start.py
cogs/: __init__.py  general.py  moderation.py  pokemon.py  tcgdex_service.py
tests/: test_tcgdex_service.py
